Fixed horizontal scrolling caused by navbar + enter key submit on surprise me

--- a/bok-frontend/styles/NavBar.module.css
+++ b/bok-frontend/styles/NavBar.module.css
@@ -130,9 +130,7 @@
         margin: 10px 10px 0px -30px; 
     }
     .desktopLinksContainer{
-        visibility: hidden;
-        width: 0px;
-        min-width: 0px;
+        display: none;
     }
 }
 
